# VASP_utils

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  NaCl_conv_fcc.poscar  README.md
include/: matrix_operations.h  poscar_2conventional.h  poscar_2ctrls.h  poscar_2primitive.h  poscar_atom_displacement.h  poscar_c2d.h  poscar_d2c.h  poscar_file.h  poscar_symmetry.h  random_utility.h  symmetry.h
src/: matrix_operations.cpp  poscar_2conventional.cpp  poscar_2ctrls.cpp  poscar_2primitive.cpp  poscar_atom_displacement.cpp  poscar_c2d.cpp  poscar_d2c.cpp  poscar_file.cpp  poscar_symmetry.cpp  random_utility.cpp  symmetry.cpp
tests/: test_coordinate_conversion.cpp  test_displacement.cpp  test_poscar_io.cpp
